@@ -1,53 +1,0 @@
-//Downstream guide urls
-:admin_guide: https://access.redhat.com/documentation/en-us/red_hat_ansible_automation_platform/2.3/html-single/red_hat_automation_controller_administration_guide/index
-:user_guide: https://access.redhat.com/documentation/en-us/red_hat_ansible_automation_platform/2.3/html-single/red_hat_automation_controller_user_guide/index
-
-//Administration guide xrefs
-:ag_backup_restore: link:{admin_guide}#ag_backup_restore[Backup and Restore]
-:ag_clustering: link:{admin_guide}#ag_clustering[Clustering]
-:ag_configure_tower: link:{admin_guide}#ag_configure_tower[Configuration]
-:ag_container_groups: link:{admin_guide}#ag_container_groups[Container Groups]
-:ag_ent_auth: link:{admin_guide}#ag_ent_auth[Setting up Enterprise Authentication]
-:ag_ext_exe_env: link:{admin_guide}#ag_ext_exe_env[]
-:ag_instance_groups: link:{admin_guide}#ag_instance_groups[Instance Groups]
-:ag_inv_import: link:{admin_guide}#ag_inv_import[]
-:ag_manage_utility_revoke_tokens: link:{admin_guide}#ag_manage_utility_revoke_tokens[Revoking Tokens]
-:ag_multi_vault: link:{admin_guide}#ag_multi_vault[]
-:ag_oauth2_token_auth: link:{admin_guide}#ag_oauth2_token_auth[OAuth2 token authentication]
-:ag_oauth2_token_revoke: link:{admin_guide}#ag_oauth2_token_revoke[Revoking OAuth2 tokens]
-:ag_session_limits: link:{admin_guide}#ag_session_limits[Session Limits]
-:ag_social_auth: link:{admin_guide}#ag_social_auth[Authentication]
-:ag_topology_viewer: link:{admin_guide}#ag_topology_viewer[Topology Viewer]
-
-//User guide xrefs
-:ug_activitystreams: link:{user_guide}#ug_activitystreams[Activity Streams]
-:ug_applications_auth: link:{user_guide}#ug_applications_auth[Application Authentication]
-:ug_build_ees: link:{user_guide}#ug_build_ees[Building Execution Environments]
-:ug_content_signing: link:{user_guide}#ug_content_signing[Content Signing]
-:ug_credentials_add: link:{user_guide}#ug_credentials_add[Adding Credentials]
-:ug_customscripts: link:{user_guide}#customscripts[Custom Scripts]
-:ug_credentials_ocp_k8s: link:{user_guide}#ug_credentials_ocp_k8s[OpenShift Credentials]
-:ug_execution_environments: link:{user_guide}#ug_execution_environments[Execution Environments]
-:ug_galaxy: link:{user_guide}#ug_galaxy[Galaxy]
-:ug_inventories: link:{user_guide}#ug_inventories[Inventories]
-:ug_inventories_add: link:{user_guide}#ug_inventories_add[Adding inventories]
-:ug_inventory_sources: link:{user_guide}#ug_inventory_sources[Inventory sources]
-:ug_jobs: link:{user_guide}#ug_jobs[Jobs]
-:ag_use_oauth_pat: link:{admin_guide}#ag_use_oauth_pat[]
-:ug_users: link:{user_guide}#ug_user[Users]
-:ug_users_create: link:{user_guide}#ug_users_create[Creating Users]
-:ug_users_tokens: link:{user_guide}#ug_users_tokens[User Tokens]
-:ug_team_create: link:{user_guide}#ug_team_create[Creating Teams]
-:ug_ldap_auth_perf_tips: link:{user_guide}#ug_ldap_auth_perf_tips[LDAP Authentication Performance]
-:ug_manual: link:{user_guide}#ug_manual[]
-:ug_notifications: link:{user_guide}#ug_notifications[Notifications]
-:ug_notifications_on_off: link:{user_guide}#ug_notifications_on_off[Turning Notifications On and Off]
-:ug_notifications_types: link:{user_guide}#ug_notifications_types[Notification Types]
-:ug_notifications_create: link:{user_guide}#ug_notifications_create[Creating notifications]
-:ug_projects_scm_types: link:{user_guide}#ug_projects_scm_types[]
-:ug_scheduling: link:{user_guide}#ug_scheduling[Scheduling]
-:ug_webhooks: link:{user_guide}#ug_webhooks[Webhooks]
-
-//Link to example yaml for container group service account
-//Administration Guide, create a container group
-:containergroup-sa-file: link:https://raw.githubusercontent.com/ansible/aap-docs/main/sync/controller-docs/common/source/containergroup-sa.yml[containergroup-sa.yml]
