@@ -23,10 +23,11 @@ target=target
 # Clean existing downstream content.
 rm -rf $target/controller/administration/administration
 rm -f $target/controller/administration/stories.adoc
+rm -f $target/controller/administration/controller-xrefs.adoc
 mkdir -p $target/controller/administration/administration
 
 # Copy converted asciidoc content downstream.
-cp -r $source/sync/controller-docs/administration/source/* $target/controller/administration/administration
+cp -r $source/sync/controller-docs/administration/source/ $target/controller/administration/administration/
 
 # Copy the table of contents.
 cp -r $source/titles/controller/administration/stories.adoc $target/controller/administration/stories.adoc
@@ -34,8 +35,8 @@ cp -r $source/titles/controller/administration/stories.adoc $target/controller/a
 # Copy the images.
 cp -r $source/sync/controller-docs/common/source/images/ $target/controller/administration/
 
-# Copy xrefs.
-cp -r $source/bin/controller-xrefs.adoc $target/controller/administration/controller-xrefs.adoc
+# Copy the cross-references.
+cp -r $source/titles/controller/xrefs/controller-xrefs.adoc $target/controller/administration/controller-xrefs.adoc
 
 ################
 # Controller API
@@ -44,10 +45,11 @@ cp -r $source/bin/controller-xrefs.adoc $target/controller/administration/contro
 # Clean existing downstream content.
 rm -rf $target/controller/controllerapi/controllerapi
 rm -f $target/controller/controllerapi/stories.adoc
+rm -f $target/controller/controllerapi/controller-xrefs.adoc
 mkdir -p $target/controller/controllerapi/controllerapi
 
 # Copy converted asciidoc content downstream.
-cp -r $source/sync/controller-docs/controllerapi/source/* $target/controller/controllerapi/controllerapi
+cp -r $source/sync/controller-docs/controllerapi/source/ $target/controller/controllerapi/controllerapi/
 
 # Copy the table of contents.
 cp -r $source/titles/controller/controllerapi/stories.adoc $target/controller/controllerapi/stories.adoc
@@ -55,8 +57,8 @@ cp -r $source/titles/controller/controllerapi/stories.adoc $target/controller/co
 # Copy the images.
 cp -r $source/sync/controller-docs/common/source/images/ $target/controller/controllerapi/
 
-# Copy xrefs.
-cp -r $source/bin/controller-xrefs.adoc $target/controller/controllerapi/controller-xrefs.adoc
+# Copy the cross-references.
+cp -r $source/titles/controller/xrefs/controller-xrefs.adoc $target/controller/controllerapi/controller-xrefs.adoc
 
 ############
 # Quickstart
@@ -65,10 +67,11 @@ cp -r $source/bin/controller-xrefs.adoc $target/controller/controllerapi/control
 # Clean existing downstream content.
 rm -rf $target/controller/quickstart/quickstart
 rm -f $target/controller/quickstart/stories.adoc
+rm -f $target/controller/quickstart/controller-xrefs.adoc
 mkdir -p $target/controller/quickstart/quickstart
 
 # Copy converted asciidoc content downstream.
-cp -r $source/sync/controller-docs/quickstart/source/* $target/controller/quickstart/quickstart
+cp -r $source/sync/controller-docs/quickstart/source/ $target/controller/quickstart/quickstart/
 
 # Copy the table of contents.
 cp -r $source/titles/controller/quickstart/stories.adoc $target/controller/quickstart/stories.adoc
@@ -76,8 +79,8 @@ cp -r $source/titles/controller/quickstart/stories.adoc $target/controller/quick
 # Copy the images.
 cp -r $source/sync/controller-docs/common/source/images/ $target/controller/quickstart/
 
-# Copy xrefs.
-cp -r $source/bin/controller-xrefs.adoc $target/controller/quickstart/controller-xrefs.adoc
+# Copy the cross-references.
+cp -r $source/titles/controller/xrefs/controller-xrefs.adoc $target/controller/quickstart/controller-xrefs.adoc
 
 ###############
 # Release notes
@@ -86,10 +89,11 @@ cp -r $source/bin/controller-xrefs.adoc $target/controller/quickstart/controller
 # Clean existing downstream content.
 rm -rf $target/controller/release-notes/release-notes
 rm -f $target/controller/release-notes/stories.adoc
+rm -f $target/controller/release-notes/controller-xrefs.adoc
 mkdir -p $target/controller/release-notes/release-notes
 
 # Copy converted asciidoc content downstream.
-cp -r $source/sync/controller-docs/release-notes/source/* $target/controller/release-notes/release-notes
+cp -r $source/sync/controller-docs/release-notes/source/ $target/controller/release-notes/release-notes/
 
 # Copy the table of contents.
 cp -r $source/titles/controller/release-notes/stories.adoc $target/controller/release-notes/stories.adoc
@@ -97,8 +101,8 @@ cp -r $source/titles/controller/release-notes/stories.adoc $target/controller/re
 # Copy the images.
 cp -r $source/sync/controller-docs/common/source/images/ $target/controller/release-notes/
 
-# Copy xrefs.
-cp -r $source/bin/controller-xrefs.adoc $target/controller/release-notes/controller-xrefs.adoc
+# Copy the cross-references.
+cp -r $source/titles/controller/xrefs/controller-xrefs.adoc $target/controller/release-notes/controller-xrefs.adoc
 
 #######################
 # Upgrade and migration
@@ -107,10 +111,11 @@ cp -r $source/bin/controller-xrefs.adoc $target/controller/release-notes/control
 # Clean existing downstream content.
 rm -rf $target/controller/upgrade-migration-guide/upgrade-migration-guide
 rm -f $target/controller/upgrade-migration-guide/stories.adoc
+rm -f $target/controller/upgrade-migration-guide/controller-xrefs.adoc
 mkdir -p $target/controller/upgrade-migration-guide/upgrade-migration-guide
 
 # Copy converted asciidoc content downstream.
-cp -r $source/sync/controller-docs/upgrade-migration-guide/source/* $target/controller/upgrade-migration-guide/upgrade-migration-guide
+cp -r $source/sync/controller-docs/upgrade-migration-guide/source/ $target/controller/upgrade-migration-guide/upgrade-migration-guide/
 
 # Copy the table of contents.
 cp -r $source/titles/controller/upgrade-migration-guide/stories.adoc $target/controller/upgrade-migration-guide/stories.adoc
@@ -118,8 +123,8 @@ cp -r $source/titles/controller/upgrade-migration-guide/stories.adoc $target/con
 # Copy the images.
 cp -r $source/sync/controller-docs/common/source/images/ $target/controller/upgrade-migration-guide/
 
-# Copy xrefs.
-cp -r $source/bin/controller-xrefs.adoc $target/controller/upgrade-migration-guide/controller-xrefs.adoc
+# Copy the cross-references.
+cp -r $source/titles/controller/xrefs/controller-xrefs.adoc $target/controller/upgrade-migration-guide/controller-xrefs.adoc
 
 ############
 # User guide
@@ -128,10 +133,11 @@ cp -r $source/bin/controller-xrefs.adoc $target/controller/upgrade-migration-gui
 # Clean existing downstream content.
 rm -rf $target/controller/userguide/userguide
 rm -f $target/controller/userguide/stories.adoc
+rm -f $target/controller/userguide/controller-xrefs.adoc
 mkdir -p $target/controller/userguide/userguide
 
 # Copy converted asciidoc content downstream.
-cp -r $source/sync/controller-docs/userguide/source/* $target/controller/userguide/userguide
+cp -r $source/sync/controller-docs/userguide/source/ $target/controller/userguide/userguide/
 
 # Copy the table of contents.
 cp -r $source/titles/controller/userguide/stories.adoc $target/controller/userguide/stories.adoc
@@ -139,5 +145,5 @@ cp -r $source/titles/controller/userguide/stories.adoc $target/controller/usergu
 # Copy the images.
 cp -r $source/sync/controller-docs/common/source/images/ $target/controller/userguide/
 
-# Copy xrefs.
-cp -r $source/bin/controller-xrefs.adoc $target/controller/userguide/controller-xrefs.adoc
+# Copy the cross-references.
+cp -r $source/titles/controller/xrefs/controller-xrefs.adoc $target/controller/userguide/controller-xrefs.adoc
